tests/ui/macros/include-single-expr.rs
fn main() {
    include!("include-single-expr-helper.rs");
    include!("include-single-expr-helper-1.rs");
}

//~? ERROR include macro expected single expression
